Switching to kiota generated SDKs